# focused-reminder

./: .gitignore  Makefile  README.md  main.spec  pyproject.toml
.trae/rules/: project_rules.md
assets/: generate-icons.sh  icon.icns
focused_reminder/: main.py
