[project]
name = "focused-reminder"
version = "0.0.1"
description = "Focused reminder application with visual borders and countdown timer"
authors = [{ name = "Namuan", email = "namuan@deskriders.dev" }]
readme = "README.md"
keywords = ['python', 'reminders', 'productivity']
requires-python = ">=3.9,<4.0"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pyobjc",
    "pyqt6",
    "pyremindkit@git+https://github.com/namuan/pyremindkit",
]

[project.urls]
Homepage = "https://namuan.github.io/focused-reminder/"
Repository = "https://github.com/namuan/focused-reminder"
Documentation = "https://namuan.github.io/focused-reminder/"

[tool.uv]
dev-dependencies = [
    "pytest",
    "pre-commit",
    "tox-uv",
    "ruff",
    "pyinstaller",
    "radon>=6.0.1",
    "xenon>=0.9.3",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["focused_reminder"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    "TRY003",
    "TRY300",
    "TRY301",
    "E741",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true

[project.scripts]
focused-reminder = "focused_reminder:main"
